# hermes

./: requeriments.txt  setup.cfg
src/hermes/: __init__.py  config.py  mail_util.py
