[metadata]
name = hermes-insper
version = 0.0.1
author = Example Author
author_email = author@example.com
description = Send emails to students
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/insper-education/hermes
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
scripts =
    src/bin/hermes
python_requires = >=3.6

[options.packages.find]
where = src