[metadata]
name = hermes-insper
version = 0.0.1
author = Example Author
author_email = author@example.com
description = Send emails to students
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/insper-education/hermes
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
scripts =
    src/bin/hermes
python_requires = >=3.6

install_requires =
    cachetools
    certifi
    chardet
    google-api-core
    google-api-python-client
    google-auth
    google-auth-httplib2
    google-auth-oauthlib
    googleapis-common-protos
    httplib2
    idna
    oauthlib
    protobuf
    pyasn1
    pyasn1-modules
    pytz
    requests
    requests-oauthlib
    rsa
    six
    uritemplate
    urllib3

[options.packages.find]
where = src